# TodoApp

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: create-icon.ps1  release.ps1
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/settings/: index.js
src/updater/: index.js  updateAvailableModal.js  updateProgressModal.js  updater.css  updaterService.js
