[package]
name = "todocompanion"
version = "0.1.0"
description = "A right-edge task companion built with Tauri"
authors = ["Rafael"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
